creación e implementación de botón para cambiar avatar y botón para cambiar tipo de mapa

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ justify-self: center;
   font-size: 16px;
   padding:10px 20px;
   border: none;
+  margin: 10px;
   border-radius: 20px;
   cursor:pointer;
 }
