--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,56 @@ justify-self: center;
   cursor:pointer;
 }
 
+.navbar-burger-menu{
+  display: none;
+}
+
+
+@media screen and (max-width:768px){
+  .navbar-style{
+    grid-template-columns: repeat(2,1fr);
+  }
+  .burger-icon{
+    font-size: 40px;
+  }
+  .burger-toggle{
+    display: none;
+  }
+  .burger-menu{
+    display:none;
+    position: absolute;
+    top:100%;
+    left: 0;
+    background-color: #f6f6f6;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 100%;
+    height: 25%;
+    z-index: 1;
+  }
+  .burgue-toggle:checked + .burger-icon +.burger-menu{
+    display: block;
+  }
+  .navbar-burger-menu{
+    display: inline-block;
+    justify-self: end;
+    padding-right: 20px;
+    align-items: center;
+  }
+  .navbar-section-title{
+    font-size: 13px;
+    padding-left: 15px;
+  }
+  .navbar-section-menu{
+    display:none;
+  }
+  .navbar-section-end{
+    display: none;
+  }
+
+}
+
+
 .btn{
   font-size: 16px;
   padding:10px 20px;
