adición de estilos bootstrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,129 +1,7 @@
-.navbar-style{
-  position: absolute;
-  display:grid;
-  grid-template-columns: repeat(3,1fr);
-  align-items: center;
-  top:0px;
-  background-color: black;
-  color:#f6f6f6;
-  width:100%;
-  height: auto;
-}
-
-.navbar-section-title{
-  color:#f6f6f6;
-  padding-left: 50px;
-  align-items: center;
-}
-.navbar-section-menu{
-justify-self: center;
-}
-.navbar-section-menu ul{
-  list-style: none;
-}
-.navbar-section-menu ul li{
-  display: inline-block;
-  padding-right: 30px;
-  align-items: center;
-}
-.navbar-section-end{
-  display: inline-block;
-  justify-self: end;
-  padding-right: 40px;
-  align-items: center;
-}
-
-.lista-bkn{
-  list-style: none;
-}
-
-.btn-salir{
-  background-color: #f6f6f6;
-  color:black;
-  font-size: 16px;
-  padding:10px 20px;
-  border: none;
-  border-radius: 20px;
-  cursor:pointer;
-}
-
-.navbar-burger-menu{
-  display: none;
-}
-
-
-@media screen and (max-width:768px){
-  .navbar-style{
-    grid-template-columns: repeat(2,1fr);
-  }
-  .burger-icon{
-    font-size: 40px;
-  }
-  .burger-toggle{
-    display: none;
-  }
-  .burger-menu{
-    display:none;
-    position: absolute;
-    top:100%;
-    left: 0;
-    background-color: #f6f6f6;
-    border: 1px solid #ccc;
-    padding: 10px;
-    width: 100%;
-    height: 25%;
-    z-index: 1;
-  }
-  .burgue-toggle:checked + .burger-icon +.burger-menu{
-    display: block;
-  }
-  .navbar-burger-menu{
-    display: inline-block;
-    justify-self: end;
-    padding-right: 20px;
-    align-items: center;
-  }
-  .navbar-section-title{
-    font-size: 13px;
-    padding-left: 15px;
-  }
-  .navbar-section-menu{
-    display:none;
-  }
-  .navbar-section-end{
-    display: none;
-  }
-
-}
-
-
-.btn{
-  font-size: 16px;
-  padding:10px 20px;
-  border: none;
-  margin: 10px;
-  border-radius: 20px;
-  cursor:pointer;
-}
-
-.btn-body{
-  background-color:deepskyblue;
-  color:#f6f6f6;
-}
-
-.btn-aventura{
-  background-color:green;
-  color:#f6f6f6;
-}
-
-.form-input{
-  border-radius: 20px;
-  padding:10px 20px;
-  border: 2px solid #ccc;
-}
-
 /* Tamaño del MapContainer*/
 .leaflet-container{
-  height: 500px;
+  margin-top:1rem;
+  background-color: #060606;
+  height: 700px;
   width: auto;
 }
