--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
-  padding-top: 100px;
+  background: fixed;
+  background-color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
