--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
 /* Tamaño del MapContainer*/
 .leaflet-container{
   margin-top:1rem;
+  border-radius: 30px;
+  margin-left: 50px;
+  margin-right:50px;
   background-color: #060606;
   height: 600px;
   width: auto;
+}
+
+@media (max-width:845px){
+  .leaflet-container{
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
