creación de consola para operar en el mapa

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,9 @@
   height: 600px;
   width: auto;
 }
-
+body{
+  color:red;
+}
 @media (max-width:845px){
   .leaflet-container{
     margin-left: 5px;
